[package]
name = "embedded-graphics-el320x240-36hb-sender"
version = "0.1.0"
authors = ["Lolka_097"]
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
lazy_static = "1.4"
bytes = "1"

#async
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time", "io-util"] }
async-trait = "0.1"
tokio-serial = "5.4"

# display
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.4.1"

[lib]
name = "el320x240_36hb_sender"

[[bin]]
name = "text-example"